<resources>
    <string name="app_name">Cửa Hàng Trực Tuyến</string>
    <string name="title_splash"><font color="#dc6f31">Điểm mua đồ 2ndhand</font> chất lượng nhất \nđường Man Thiện</string>
    <string name="subtitle_splash">Nhận gợi ý cá nhân hóa \nTận hưởng giao hàng nhanh, miễn phí</string>
    <string name="signin">Đã có tài khoản? <font color="#dc6f31">Đăng Nhập</font></string>
    <string name="profile_image">Ảnh Đại Diện</string>
    <string name="cart_icon">Biểu Tượng Giỏ Hàng</string>
    <string name="bell_icon">Chuông Thông Báo</string>
    <string name="settings_icon">Biểu Tượng Cài Đặt</string>
    <string name="back">Quay Lại</string>
    <string name="favorite">Yêu Thích</string>
</resources>